--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,12 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-$bluni: #FFB600;
-$primary: #005ccc;
-$critical: #F56565;
-$success: #2C9E4B;
-$decorative-1:#5c0099;
-$decorative-2: #06837f;
-$white: #ffffff;
-$background:#f7f7f7;
 $bold: 600;
 $normal: 400;
 $color: (
@@ -16,17 +8,20 @@ $color: (
     'success': rgb(44, 158, 75),
     'decorative-1':rgb(92, 0, 153),
     'decorative-2': rgb(6, 131, 127),
-    'white': rgb(255, 255, 255),
+    'light': rgb(255, 255, 255),
     'gray-dark':#1d1d1d,
-    'background':rgb(247, 247, 247),
+    'back':rgb(247, 247, 247),
 );
+@mixin name {
+	
+}
 * {
     margin: 0%;
     padding: 0%;
 }
 body {
 	font-family: 'Inter', sans-serif !important;
-	background-color: map-get($map: $color, $key: background) !important;
+	background-color: map-get($map: $color, $key: back) !important;
 	animation: fadeIn;
 	animation-duration: 1.2s;
 }
@@ -43,7 +38,7 @@ footer {
 		color: map-get($map: $color, $key: gray-dark) !important;
 		cursor: pointer;
 	}
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	padding: 4rem 0rem 4rem 0rem;
 	border-top-left-radius: 6rem;
 	border-top-right-radius: 6rem;
@@ -100,7 +95,7 @@ nav {
 	border-radius: 0rem 0rem 6rem 6rem;
 	background-image: url(../image/hero-home-2.jpg);
 	background-position: 80% 50%;
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 	background-size: 34%;
 	background-repeat: no-repeat;
@@ -139,7 +134,7 @@ nav {
 	}
 }
 .white-color {
-	color: map-get($map: $color, $key: white);
+	color: map-get($map: $color, $key: light);
 }
 .black-color {
 	color: map-get($map: $color, $key: gray-dark);
@@ -183,14 +178,14 @@ nav {
 .button-primary {
 	a {
 		text-decoration: none;
-		color: $white!important;
+		color: map-get($map: $color, $key: light)!important;
 	}
 	width: 100%;
 	height: 3.25rem;
 	appearance: none;
-	background: $primary;
+	background: map-get($map: $color, $key: primary);
 	border: 0.0063rem solid rgba(36, 36, 36, 0.007);
-	color: map-get($map: $color, $key: white);
+	color: map-get($map: $color, $key: light);
 	border-radius: 0.8rem;
 	font-weight: 600;
 	font-size: 100%;
@@ -205,7 +200,7 @@ nav {
 	appearance: none;
 	background: rgba(255, 255, 255, 0);
 	border: 0rem solid #ffffff00;
-	color: $primary;
+	color: map-get($map: $color, $key: primary);
 	border-radius: 0.5rem;
 	font-weight: 600;
 	font-size: 1.3rem;
@@ -219,15 +214,15 @@ nav {
 	height: 2rem;
 	appearance: none;
 	background: rgba(255, 255, 255, 0);
-	border: 0.1rem solid $primary;
-	color: $primary;
+	border: 0.1rem solid map-get($map: $color, $key: primary);
+	color: map-get($map: $color, $key: primary);
 	border-radius: 0.5rem;
 	font-weight: 600;
 	font-size: 1rem;
 	cursor: pointer;
 	&:hover {
-		background: $primary;
-		color: map-get($map: $color, $key: white);
+		background: map-get($map: $color, $key: primary);
+		color: map-get($map: $color, $key: light);
 	}
 }
 .flex {
@@ -240,7 +235,7 @@ table {
 	table-layout: fixed;
 	border-collapse: collapse;
 	border: 0rem solid#2c2c2c;
-	background: map-get($map: $color, $key: white);
+	background: map-get($map: $color, $key: light);
 	border-radius: 1rem;
 }
 td {
@@ -269,16 +264,16 @@ th {
 	font-weight: 700;
 }
 .fa-check-circle {
-	color: $success;
+	color: map-get($map: $color, $key: success);
 }
 .fa-times-circle {
-	color: $critical;
+	color: map-get($map: $color, $key: critical);
 }
 .table-price {
 	text-align: center;
 }
 .card-wide {
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	padding: 2rem;
 	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
@@ -293,14 +288,14 @@ th {
 	}
 }
 .card-mid {
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	padding: 2rem;
 	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 }
 .card-features {
 	padding: 2rem;
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 	display: inline;
@@ -312,41 +307,41 @@ th {
 .icon {
 	padding: 1rem;
 	border-radius: 1rem;
-	color: $white;
+	color: map-get($map: $color, $key: light);
 }
 .fa-star-of-life {
-	background-color: $decorative-1;
+	background-color: map-get($map: $color, $key: decorative-1);
 }
 .fa-piggy-bank {
-	background-color: $decorative-2;
+	background-color: map-get($map: $color, $key: decorative-2);
 }
 .fa-shopping-basket {
-	background-color: $decorative-2;
+	background-color: map-get($map: $color, $key: decorative-2);
 }
 .fa-laugh-beam {
-	background-color: $bluni;
+	background-color: map-get($map: $color, $key: bluni);
 }
 .fa-heart {
-	background-color: $critical;
+	background-color: map-get($map: $color, $key: critical);
 }
 .fa-globe-americas {
-	background-color: $success;
+	background-color: map-get($map: $color, $key: success);
 }
 .fa-leaf {
-	background-color: $success;
+	background-color: map-get($map: $color, $key: success);
 }
 .fa-star {
-	background-color: $bluni;
+	background-color: map-get($map: $color, $key: bluni);
 }
 .fa-seedling {
-	color: $success;
+	color: map-get($map: $color, $key: success);
 }
 .fa-lemon {
-	color: $bluni;
+	color: map-get($map: $color, $key: bluni);
 }
 .card-team {
 	padding: 2rem;
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	text-align: center;
 	border-radius: 1rem;
 	img {
@@ -355,7 +350,7 @@ th {
 	}
 }
 .card-product {
-	background-color: map-get($map: $color, $key: white);
+	background-color:map-get($map: $color, $key: light);
 	padding: 1rem;
 	text-align: center;
 	border-radius: 1rem;
@@ -375,7 +370,7 @@ th {
 	}
 }
 .card-store {
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	padding: 2rem;
 	text-align: center;
 	border-radius: 1rem;
@@ -389,14 +384,14 @@ th {
 		object-position: 50% 50%;
 	}
 	&:hover {
-		background-color: map-get($map: $color, $key: white);
+		background-color: map-get($map: $color, $key: light);
 		transform: translateY(-4px);
 		transition: transform .2s;
 	}
 }
 .card-text {
 	padding: 4rem;
-	background-color: map-get($map: $color, $key: white);
+	background-color: map-get($map: $color, $key: light);
 	text-align: center;
 	border-radius: 1rem;
 	margin-left: 1rem;
@@ -480,7 +475,7 @@ img {
 		border-radius: 2rem;
 		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
 		background-position: 50% 70%;
-		background-color: map-get($map: $color, $key: white);
+		background-color: map-get($map: $color, $key: light);
 		box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -566,7 +561,7 @@ img {
 		border-radius: 2rem;
 		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
 		background-position: 88% 50%;
-		background-color: map-get($map: $color, $key: white);
+		background-color: map-get($map: $color, $key: light);
 		box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 		background-size: cover;
 		background-repeat: no-repeat;
